# mantle

./: .env.example  .gitignore  AI_Privacy_Gateway_PRD_v2.0.md  AI_Privacy_Gateway_PRD_v3_0.md  CLAUDE.md  Dockerfile  PROJECT_PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
rust/: Cargo.toml
rust/src/: lib.rs
src/mantle/: __init__.py  exceptions.py  logging.py  redis.py
src/mantle/api/: health.py  routes.py
src/mantle/db/: models.py  session.py
src/mantle/detection/: __init__.py  engine.py  patterns.py  presidio.py
src/mantle/middleware/: auth.py
src/mantle/providers/: anthropic.py  base.py  openai.py
src/mantle/rehydration/: __init__.py  strategies.py  stream.py
src/mantle/schemas/: __init__.py  chat.py  detection.py
src/mantle/surrogates/: __init__.py  faker.py
src/mantle/vault/: __init__.py  fernet.py
