[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mantle"
version = "0.1.0"
description = "AI Privacy Gateway — reverse proxy for LLM providers with real-time PII detection, surrogate generation, and rehydration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Benjamin Silva" },
    { name = "Jacob Luna" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "uvloop>=0.19.0",
    "httpx[http2]>=0.27.0",
    "sse-starlette>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "faker>=24.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
    "cryptography>=42.0.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "structlog>=24.0.0",
    "langfuse>=2.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "httpx",  # for TestClient
]

[tool.maturin]
python-source = "src"
module-name = "mantle._rust"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
